# sec-rag-assistant

./: .cursorrules  .env.example  .gitignore  BACKLOG.md  CURSOR_BUILD_GUIDE.md  DECISIONS.md  LICENSE  README.md  docker-compose.yml  download_filings.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cd94896f98a1_initial_schema_with_pgvector.py
backend/app/: __init__.py  config.py  deps.py  logging_config.py  main.py  observability.py
backend/app/api/: __init__.py  schemas.py  v1.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/eval/: __init__.py  golden_set.py  run.py  scorer.py
backend/app/generation/: __init__.py  answerer.py  llm_client.py  prompts.py
backend/app/ingest/: __init__.py  chunker.py  embedder.py  html_parser.py  pipeline.py
backend/app/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  reranker.py
backend/tests/: conftest.py  test_answerer.py  test_bm25.py  test_chunker.py  test_dense.py  test_health.py  test_hybrid.py  test_ingest.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatPanel.tsx  CitationLink.tsx  RetrievalPanel.tsx
frontend/src/hooks/: useQueryStream.ts
