[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-rag-assistant"
version = "0.1.0"
description = "Enterprise RAG assistant for SEC filings (10-K, 10-Q)."
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "Rahul Kushal Anchi" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "anthropic>=0.34",
    "openai>=1.50",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "sentence-transformers>=3.0",
    "rank_bm25>=0.2.2",
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "langsmith>=0.1.130",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "tenacity>=9.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "faker>=28.0",
    "types-beautifulsoup4",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"
